k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-api
  namespace: hackathon-video-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-api
  template:
    metadata:
      labels:
        app: video-api
    spec:
      containers:
      - name: video-api
        image: fiap-x-video-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
        resources:
          requests:
            cpu: "10m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
