k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-api
  namespace: hackathon-video-api
spec:
  selector:
    app: video-api
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
  type: ClusterIP
